* Updated Little CMS to v2.6 (git 4da8703)
* Updated Unrar to v5.1.4
* Updated LAV Filters to v0.61.2.6:
    - Ticket #3575, LAV Splitter: Alternate audio support for HLS
    - LAV Video: Support VP7 video
    - LAV Video: Use the MediaFondation WMV decoder on Windows 7+ instead of the DMO WMV decoder
! Ticket #34, VSFilter/ISR: Override placement feature was not working even if enabled
! Ticket #1574/#4171, ISR: Subtitle positioning was wrong when using default style override
! Ticket #2244, ISR: Changes in subresync bar were lost after changing style
! Ticket #2671, VSFilter: Video frames were not marked as interlaced
! Ticket #3701, Subtitle outline was too thick when using default style override
! Ticket #4288, Changing the zoom level when in fullscreen mode did nothing


1.7.5 - 01 May 2014
===================
* Updated Catalan, Croatian, Dutch, German, Japanese, Slovenian, Spanish, Ukrainian and Vietnamese translations
! Ticket #3691, PGS subtitles: Some lines stayed visible for too long when using the queue
! Ticket #4231, Don't prevent the users from using the ISR if they choose not to block VSFilter like filters
! Ticket #4240, Crashes could randomly occur when playing files with PGS subtitles (mostly when seeking quickly)


1.7.4 - 16 April 2014
=====================
+ New Bengali and Tatar translations
+ Support for opening "icyx://" stream URLs
+ Ticket #2348/#3583, Automatically refresh the information bar and title bar so that the correct information
  is always shown for streaming (e.g. online radios)
+ Ticket #4043, Statistic: Show playback rate for audio files
* If MPC-HC is configured to override the splitter choice when doing the initial track selection,
  tracks selected at splitter level will be preferred in case more than one tracks match the criteria
* The "Jump to" menu has been split in several smaller submenus displayed in the "Navigate" menu
  depending on the media currently playing